-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.509 2009-05-17 01:59:37 jluis Exp $
-----------------------------------------------------------------------------------------

2009-05-17	jluis
	* gmt_notunix.h:	Declare HAVE_SINCOS 1 when #ifdef __INTEL_COMPILER (the Intel
				compiler also provide a sincos function)
	* mgd77/mgd77magref.c:	Use sincos()

2009-05-14	remko
	* grdinfo.{c,txt}:	Add option -L0 to actually scan data to determine zmin and zmax
	* gmt_nc.c:		Argument [layer] was not stripped from varname and would end up
				in output grid.  Set zmin/zmax to NaN when info not in header.

2009-05-13	pwessel
	* *.[ch]:		Moving to use GMT_LONG for almost all integers.

2009-05-12	remko
	* gmt_map.c (GMT_UTMzone_to_wesn):	Numerous bug fixes: Did not report bad zone
				for < A or > Z; Zones A+B reached till 84S instead of 80S; Zone J
				wrongly produced value for Zone K; Zones U+W were not recognized;
				Now also equates Zone O to Zone P (already equated Zone I to J).

2009-05-08	remko
	* gmtconvert.c:		Switch off default NaN treatment when NAN_RECORDS=pass and no
				multi-segment output is requested.
	* gmt_init.c:		Renamed GRID_FORMAT to GRIDFILE_FORMAT to avoid confusion with
				other GRID_* variables which relate to painting grids, and in
				accordance with GRIDFILE_SHORTHAND.
				GRID_FORMAT can still be used for backwards compatibility.
				Allow different units for font sizes. Default remains points.
				GMT_convert_units: add 10 to new_format to specify it as
				default unit as well.
	* gmt_keywords.d, gmt.h, gmt_grdio.h, gmt_globals.h, gmtdefaults.txt, gmtdefaults_??.in:
				Changed accordingly.
	* gmtdefaults.txt:	Properly alphabetized entries.
	* pslib.c:		Removed superfluous writing of "P\n" from ps_clipon.
				Removed obsolete "split" argument from ps_line().
	* pslib.h, *.c:		Changed accordingly.

2009-05-07	pwessel